--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my first socket.io app",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
   },
   "license": "MIT",
   "scripts": {
