--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6"
   },
   "license": "MIT",
   "scripts": {
